--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "gulp-util": "^3.0.8",
     "replacestream": "^4.0.2",
     "stream-buffer-replace": "^1.0.1",
-    "through2": "^2.0.3"
+    "stream-transform": "^0.1.2",
+    "through2": "^2.0.3",
+    "vinyl-transform": "^1.0.0"
   }
 }
